--- a/remote1/tsconfig.json
+++ b/remote1/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "include": [
         "src/components/*",
+        "src/index.js"
     ],
     "compilerOptions": {
         "jsx": "react-jsx",
         "target": "es2016",                              /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
         "module": "ES2015",                               /* Specify what module code is generated. */
+        //"allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
         "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
         "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */   
         "esModuleInterop": true,                          /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
